// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Buttons Attainia Buttons 1`] = `
<div
  className="sc-bwzfXH cKsKYL"
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div
        className="sc-htpNat bxsguu"
      >
        <button
          className="sc-bdVaJa jxftiN"
        >
          Primary Default
        </button>
        <button
          className="sc-bdVaJa hNtcer"
        >
          Primary Light
        </button>
        <button
          className="sc-bdVaJa jxftiN"
        >
          Primary Medium
        </button>
        <button
          className="sc-bdVaJa jkSTQl"
        >
          Primary Dark
        </button>
      </div>
      <br />
      <br />
      <div
        className="sc-htpNat bxsguu"
      >
        <button
          className="sc-bdVaJa bbzLau"
        >
          Secondary Default
        </button>
        <button
          className="sc-bdVaJa fuYAft"
        >
          Secondary Light
        </button>
        <button
          className="sc-bdVaJa bbzLau"
        >
          Secondary Medium
        </button>
        <button
          className="sc-bdVaJa ifSEqA"
        >
          Secondary Dark
        </button>
      </div>
    </div>
    <button
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div
        style={undefined}
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginTop": "50px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              Attainia Buttons
            </h2>
          </div>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              The basic Attainia buttons with primary and secondary colors.
            </p>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              style={
                Object {
                  "backgroundColor": "#fafafa",
                  "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                  "fontSize": ".88em",
                  "lineHeight": 1.5,
                  "overflowX": "scroll",
                  "padding": ".5rem",
                }
              }
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #E10600
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Primary Default
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #F0887D
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Primary Light
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #E10600
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Primary Medium
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #FF0700
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Primary Dark
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  br
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div
                style={
                  Object {
                    "paddingLeft": 18,
                    "paddingRight": 3,
                  }
                }
              >
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  &lt;
                  br
                </span>
                <span />
                <span
                  style={
                    Object {
                      "color": "#777",
                    }
                  }
                >
                  /&gt;
                </span>
              </div>
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    styled.div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #1b6595
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Secondary Default
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #227fbb
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Secondary Light
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #1b6595
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Secondary Medium
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  backgroundColor
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  #1F74B2
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Secondary Dark
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    styled.div
                    &gt;
                  </span>
                </div>
              </div>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                styled.button
                " Component
              </h2>
              <table
                style={
                  Object {
                    "borderCollapse": "separate",
                    "borderSpacing": "10px 5px",
                    "marginLeft": -10,
                  }
                }
              >
                <thead>
                  <tr>
                    <th>
                      property
                    </th>
                    <th>
                      propType
                    </th>
                    <th>
                      required
                    </th>
                    <th>
                      default
                    </th>
                    <th>
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      disabled
                    </td>
                    <td>
                      bool
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      styles
                    </td>
                    <td>
                      other
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          }
                        </span>
                        }
                      </span>
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      status
                    </td>
                    <td>
                      other
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                    <td />
                  </tr>
                </tbody>
              </table>
            </div>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                styled.div
                " Component
              </h2>
              <small>
                No propTypes defined!
              </small>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Buttons Button Playground 1`] = `
<div
  className="sc-bwzfXH cKsKYL"
>
  <div>
    <div
      style={
        Object {
          "position": "relative",
          "zIndex": 0,
        }
      }
    >
      <div>
        <button
          className="sc-bdVaJa bmSidg"
          disabled={false}
          onClick={[Function]}
          onMouseDown={[Function]}
          onMouseMove={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
        >
          Attainia Button
        </button>
      </div>
    </div>
    <button
      onClick={[Function]}
      onMouseDown={[Function]}
      onMouseMove={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      style={
        Object {
          "background": "#28c",
          "border": "none",
          "borderRadius": "0 0 0 5px",
          "color": "#fff",
          "cursor": "pointer",
          "display": "block",
          "fontFamily": "sans-serif",
          "fontSize": "12px",
          "padding": "5px 15px",
          "position": "fixed",
          "right": 0,
          "top": 0,
        }
      }
      type="button"
    >
      Show Info
    </button>
    <div
      style={
        Object {
          "background": "white",
          "bottom": 0,
          "display": "none",
          "left": 0,
          "overflow": "auto",
          "padding": "0 40px",
          "position": "fixed",
          "right": 0,
          "top": 0,
          "zIndex": 99999,
        }
      }
    >
      <button
        onClick={[Function]}
        onMouseDown={[Function]}
        onMouseMove={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "background": "#28c",
            "border": "none",
            "borderRadius": "0 0 0 5px",
            "color": "#fff",
            "cursor": "pointer",
            "display": "block",
            "fontFamily": "sans-serif",
            "fontSize": "12px",
            "padding": "5px 15px",
            "position": "fixed",
            "right": 0,
            "top": 0,
          }
        }
        type="button"
      >
        ×
      </button>
      <div
        style={undefined}
      >
        <div
          style={
            Object {
              "WebkitFontSmoothing": "antialiased",
              "backgroundColor": "#fff",
              "border": "1px solid #eee",
              "borderRadius": "2px",
              "boxShadow": "0px 2px 3px rgba(0, 0, 0, 0.05)",
              "color": "#444",
              "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
              "fontSize": "15px",
              "fontWeight": 300,
              "lineHeight": 1.45,
              "marginTop": "50px",
              "padding": "20px 40px 40px",
            }
          }
        >
          <div
            style={
              Object {
                "borderBottom": "1px solid #eee",
                "marginBottom": 10,
                "paddingTop": 10,
              }
            }
          >
            <h1
              style={
                Object {
                  "fontSize": "35px",
                  "margin": 0,
                  "padding": 0,
                }
              }
            >
              Buttons
            </h1>
            <h2
              style={
                Object {
                  "fontSize": "22px",
                  "fontWeight": 400,
                  "margin": "0 0 10px 0",
                  "padding": 0,
                }
              }
            >
              Button Playground
            </h2>
          </div>
          <div
            style={
              Object {
                "marginBottom": 0,
              }
            }
          >
            <p
              style={
                Object {
                  "WebkitFontSmoothing": "antialiased",
                  "color": "#444",
                  "fontFamily": "-apple-system, \\".SFNSText-Regular\\", \\"San Francisco\\", BlinkMacSystemFont, \\"Segoe UI\\", \\"Roboto\\", \\"Oxygen\\", \\"Ubuntu\\", \\"Cantarell\\", \\"Fira Sans\\", \\"Droid Sans\\", \\"Helvetica Neue\\", \\"Lucida Grande\\", \\"Arial\\", sans-serif",
                  "fontSize": "15px",
                }
              }
            >
              This is the basic button with some knobs playground stuff.
            </p>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Story Source
            </h1>
            <pre
              style={
                Object {
                  "backgroundColor": "#fafafa",
                  "fontFamily": "Menlo, Monaco, \\"Courier New\\", monospace",
                  "fontSize": ".88em",
                  "lineHeight": 1.5,
                  "overflowX": "scroll",
                  "padding": ".5rem",
                }
              }
            >
              <div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;
                    div
                  </span>
                  <span />
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &gt;
                  </span>
                </div>
                <div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;
                      styled.button
                    </span>
                    <span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          onClick
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#170",
                                  }
                                }
                              >
                                Button_clicked()
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          disabled
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#a11",
                                  }
                                }
                              >
                                false
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                      </span>
                      <span>
                         
                        <span
                          style={Object {}}
                        >
                          styles
                        </span>
                        <span>
                          =
                          <span
                            style={Object {}}
                          >
                            <span>
                              {
                              <span
                                style={
                                  Object {
                                    "color": "#666",
                                  }
                                }
                              >
                                {
                                <span
                                  style={
                                    Object {
                                      "color": "#666",
                                    }
                                  }
                                >
                                  padding
                                </span>
                                : 
                                <span
                                  style={
                                    Object {
                                      "color": "#22a",
                                      "wordBreak": "break-word",
                                    }
                                  }
                                >
                                  "
                                  18px 5px
                                  "
                                </span>
                                }
                              </span>
                              }
                            </span>
                          </span>
                        </span>
                        
                      </span>
                    </span>
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &gt;
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 48,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      Attainia Button
                    </span>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingLeft": 33,
                        "paddingRight": 3,
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#777",
                        }
                      }
                    >
                      &lt;/
                      styled.button
                      &gt;
                    </span>
                  </div>
                </div>
                <div
                  style={
                    Object {
                      "paddingLeft": 18,
                      "paddingRight": 3,
                    }
                  }
                >
                  <span
                    style={
                      Object {
                        "color": "#777",
                      }
                    }
                  >
                    &lt;/
                    div
                    &gt;
                  </span>
                </div>
              </div>
            </pre>
          </div>
          <div>
            <h1
              style={
                Object {
                  "borderBottom": "1px solid #EEE",
                  "fontSize": "25px",
                  "margin": "20px 0 0 0",
                  "padding": "0 0 5px 0",
                }
              }
            >
              Prop Types
            </h1>
            <div>
              <h2
                style={
                  Object {
                    "margin": "20px 0 0 0",
                  }
                }
              >
                "
                styled.button
                " Component
              </h2>
              <table
                style={
                  Object {
                    "borderCollapse": "separate",
                    "borderSpacing": "10px 5px",
                    "marginLeft": -10,
                  }
                }
              >
                <thead>
                  <tr>
                    <th>
                      property
                    </th>
                    <th>
                      propType
                    </th>
                    <th>
                      required
                    </th>
                    <th>
                      default
                    </th>
                    <th>
                      description
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      disabled
                    </td>
                    <td>
                      bool
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      styles
                    </td>
                    <td>
                      other
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      <span>
                        {
                        <span
                          style={
                            Object {
                              "color": "#666",
                            }
                          }
                        >
                          {
                          }
                        </span>
                        }
                      </span>
                    </td>
                    <td />
                  </tr>
                  <tr>
                    <td>
                      status
                    </td>
                    <td>
                      other
                    </td>
                    <td>
                      no
                    </td>
                    <td>
                      -
                    </td>
                    <td />
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
